# fastapi-gunicorn-nginx

./: Dockerfile  Dockerfile-app  README.md  docker-compose.yaml  main.py  nginx.conf  pyproject.toml
